<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_10sdp"
    android:orientation="vertical"
    tools:context=".feature.main.detail.DetailProductActivity">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivItem"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:civ_border_width="0dp"
        android:layout_gravity="center"
        android:src="@color/blue_sky_little_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        tools:text="@string/detail"
        android:textSize="@dimen/_18sdp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:paddingEnd="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivItem"
        app:layout_constraintTop_toTopOf="@+id/ivItem">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:gravity="end"
            tools:text="@string/price_cross" />

    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:paddingEnd="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivItem"
        app:layout_constraintTop_toTopOf="@+id/ivItem">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/dimension"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/tvDimension"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:gravity="end"
            tools:text="@string/price_cross" />

    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:paddingEnd="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivItem"
        app:layout_constraintTop_toTopOf="@+id/ivItem">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/price_unit"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/tvPriceUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:gravity="end"
            tools:text="@string/price_cross" />

    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBuy"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/btn_rounded_blue"
        android:text="@string/buy"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        />
</androidx.appcompat.widget.LinearLayoutCompat>