<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature.auth.LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llcMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvLblLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_40sdp"
            android:text="@string/Login"
            android:textSize="@dimen/_18sdp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/edit_text_bordered"
            android:hint="@string/enter_username"
            android:textColorHint="@color/black"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@drawable/edit_text_bordered"
            android:hint="@string/enter_password"
            android:textColorHint="@color/black"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/red_900"
            android:layout_marginStart="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_28sdp"
            android:textSize="@dimen/_12sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="@dimen/_160sdp"
            android:layout_height="@dimen/_48sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_38sdp"
            android:background="@drawable/btn_selector"
            android:enabled="false"
            android:text="@string/Login"
            android:textColor="@color/button_text_selector"
            android:textSize="@dimen/_13sdp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <include
        android:id="@+id/iLoading"
        layout="@layout/view_loading_full_screen" />
</androidx.constraintlayout.widget.ConstraintLayout>